# offroad-gazebo-integration

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  INSPECTION_WORLD.md  LICENSE  Makefile  QUICKSTART.md  README.md  UDP_INTEGRATION.md  output.json  package.xml  pytest_html_report.html  setup.py  test_bridge.sh  test_launch.sh
archive/: output_1773770667.6126068.json  output_1773770667.661039.json  output_1773771194.6589086.json
config/: lidar.rviz  ros_gz_bridge.yaml  ros_gz_bridge_prius.yaml  simulation.yaml
config/rviz/: lidar_view.rviz
launch/: gazebo_adapter.launch.py  inspection_world.launch.py  offroad_world.launch.py  rviz_lidar.launch.py  udp_bridge.launch.py
models/ackermann_vehicle/: model.config  model.sdf
models/inspection_robot/: model.config  model.sdf
models/prius_vehicle/: model.config  model.sdf
models/simple_boat/: model.config  model.sdf
models/water_table/: model.config  model.sdf
offroad_gazebo_integration/: __init__.py
resource/: offroad_gazebo_integration
scripts/: build_and_test.sh  layout_rviz_gazebo.sh  manual_sensor_bridge.py  run_with_vnc.sh  spawn_robot.sh  test_movement.sh  test_udp_control.py  test_udp_send_only.py
src/: prius_drive_system.cpp
src/gazebo_adapter/: __init__.py  adapter.py  bridge.py  control_mapping.py  laserscan_to_pointcloud.py  math_utils.py  sensor_converter.py  sim_types.py  teleop_keyboard.py  terrain.py  topic_relay.py  udp_bridge.py  video_streamer.py  video_streaming.py
test/: test_adapter.py  test_prius_model.py  test_terrain.py  test_topic_contract.py  test_video_streaming.py
urdf/: inspection_geometry.urdf.xacro
worlds/: desert_terrain.sdf  inspection_world.world  test_simple.world
