<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offroad_gazebo_integration</name>
  <version>0.1.0</version>
  <description>
    Off-road autonomy simulation integration using Gazebo Sim for Ottopia av-simulation framework.
    Provides terrain simulation, vehicle dynamics, and sensor models for off-road autonomous vehicle development.
  </description>
  
  <maintainer email="damir@ottopia.tech">Damir Barr</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/damirbarr/offroad-gazebo-integration</url>
  <url type="repository">https://github.com/damirbarr/offroad-gazebo-integration</url>
  <url type="bugtracker">https://github.com/damirbarr/offroad-gazebo-integration/issues</url>
  
  <author email="damir@ottopia.tech">Damir Barr</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  
  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>
  
  <!-- Gazebo dependencies -->
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_interfaces</depend>
  
  <!-- Launch dependencies -->
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  
  <!-- av-simulation integration -->
  <!-- <depend>av_simulation</depend> -->
  <!-- Uncomment when av_simulation package is available -->
  
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
